<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ustawienia">

    <!-- TODO: Update blank fragment layout -->


    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/olowek"
        android:src="@drawable/ic_pen_foreground"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="88dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/Opis_obrazka"
        android:src="@drawable/ic_pen_foreground"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="170dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_konto_foreground"
        android:contentDescription="@string/olowek2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="37dp"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="286dp" />

    <TextView

        android:id="@+id/textView2"
        android:layout_width="195dp"
        android:layout_height="39dp"
        android:layout_marginBottom="6dp"
        android:text="@string/Ustawienia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="48dp"
        android:layout_height="48dp"


        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_imie_foreground"
        android:contentDescription="@string/olowek3"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toStartOf="@+id/textView4"


        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="48dp"

        android:layout_marginEnd="52dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/Imie"
        android:textAlignment="center"

        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/imieEditText"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2"
        app:layout_constraintVertical_bias="1.0"
         />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="48dp"

        android:layout_marginEnd="52dp"

        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/Nazwisko"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/nazwiskoEditText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="88dp"
        android:gravity="center"
        android:text="@string/Haslo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/hasloEditText" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/Opis_obrazka"

        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_inf_foreground"
        app:layout_constraintBottom_toTopOf="@+id/imageView9"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:importantForAccessibility="no"
        android:layout_marginBottom="88dp"
        android:src="@drawable/ic_klucz_foreground"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/podpis2"
        android:layout_width="173dp"
        android:layout_height="20dp"
        android:layout_marginTop="56dp"
        android:text="@string/Profil"


        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="384dp"
        android:layout_height="23dp"
        android:backgroundTint="@color/black"
        android:progress="45"
        android:progressTint="@color/black"
        android:scaleX="-1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/podpis2" />

    <Button
        android:id="@+id/button5"
        style="@style/Theme.Pizzeria"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="?android:attr/colorPressedHighlight"
        android:fontFamily="@font/quicksand"
        android:text="@string/Wyloguj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_marginTop="0dp"
        android:gravity="center"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/Opis_obrazka"
        android:src="@drawable/ic_pen_foreground"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="48dp"
        android:layout_height="32dp"
        android:backgroundTint="@color/white"
        android:src="?attr/actionModeCloseDrawable"
        android:contentDescription="@string/Opis_obrazka"
        app:tint="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="394dp"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"


        android:color="@color/black"
        android:progress="45"
        android:progressTint="@color/black"
        android:scaleX="-1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/podpis"
        android:layout_width="173dp"
        android:layout_height="20dp"
        android:layout_marginBottom="4dp"
        android:text="@string/Edycja"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/hasloEditText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="88dp"
        android:gravity="center"
        android:text="@{ustawienia.haslo}"
        android:autofillHints="@string/haslo_hint"
        android:importantForAccessibility="no"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3" />

    <EditText
        android:id="@+id/nazwiskoEditText"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"

        android:text="@{ustawienia.Nazwisko}"
        android:autofillHints="@string/nazwisko_hint"
        android:importantForAccessibility="no"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/hasloEditText"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2" />

    <EditText
        android:id="@+id/imieEditText"
        android:layout_width="100dp"
        android:layout_height="48dp"

        android:layout_marginEnd="28dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@{ustawienia.Imie}"
        android:autofillHints="@string/imie_hint"
        android:importantForAccessibility="no"

        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/nazwiskoEditText"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>